--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pmi.js",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Picarto Message Inteface",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"no test specified\""
   },
   "author": "@Picarto",
   "license": "MIT",
